# rpg

./: CMakeLists.txt  constants.h  main.cpp
Controls/: Mouse.cpp  Mouse.h
Entities/: Entity.cpp  Entity.h
Forms/: Button.cpp  Button.h
GameEngine/: Game.cpp  Game.h
Input/: Button.h
Settings/: ISettings.h  WindowSettings.cpp  WindowSettings.h
Settings/include/: json.hpp
Settings/settingsFiles/: keyBindsSettings.json  windowSettings.json
States/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
